# django-master-cars

./: .env.example  .gitignore  DockerFile  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  start.sh
src/accounts/: views.py
src/accounts/templates/: login.html  register.html
src/cars/: admin.py  apps.py  forms.py  models.py  signals.py  validators.py  views.py
src/cars/migrations/: 0001_initial.py  0002_carinventory.py  0003_alter_car_id.py  0004_car_bio.py
src/cars/templates/: car_delete.html  car_detail.html  car_update.html  cars.html  new_car.html
src/core/: settings.py  urls.py
src/core/templates/: base.html
src/services/openai_service/: client.py
